--- a/_notebooks/2024-01-16-SASS.ipynb
+++ b/_notebooks/2024-01-16-SASS.ipynb
@@ -11,7 +11,7 @@
     "title: Student Teach - SASS  \n",
     "description: A lesson on SASS! By Aditi, Eshika, Cindy, Avanthika, Nupur \n",
     "type: ccc\n",
-    "courses: { csp: {week: 13} }\n",
+    "courses: { compsci: {week: 13} }\n",
     "---"
    ]
   },
@@ -102,7 +102,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Hack 1: Create a button which can relate to your cpt project. Make a .scss file or have an inline css portion to give your button color, dimensions, and more! make it unique. Try to play with nesting as well...make two buttons if you want!"
+    "## Hack 1: Create a button which can relate to your cpt project. Make a .scss file or have an inline css portion to give your button color, dimensions, and more! make it unique. Try to play with nesting as well...make two buttons if you want!\n",
+    "\n"
    ]
   },
   {
