--- a/_notebooks/2024-01-22-Flask-JWT-Roles-for-User.ipynb
+++ b/_notebooks/2024-01-22-Flask-JWT-Roles-for-User.ipynb
@@ -33,7 +33,7 @@
     "\n",
     "> Types of Authentication\n",
     "\n",
-    "- Knowledge Authentication"
+    "- Knowledge Authentication:"
    ]
   }
  ],
