--- a/_notebooks/2024-02-21-CPT-blog.ipynb
+++ b/_notebooks/2024-02-21-CPT-blog.ipynb
@@ -10,7 +10,7 @@
     "layout: post\n",
     "title: Individual CPT Review\n",
     "type: hacks\n",
-    "courses: { compsci: {week: 20} }\n",
+    "courses: { compsci: {week: 24} }\n",
     "---"
    ]
   },
@@ -20,7 +20,7 @@
    "source": [
     "# CPT Project Generalization\n",
     "\n",
-    "In our CPT project, we made a turn-based Tarkov game in which players are assigned different roles and perform certain functions based on those roles. \n",
+    "In our CPT project, we made a turn-based Tarkov game in which players are assigned different roles and perform certain functions based on those roles. In our game, users must first create a character from 5 different character types where they7 are then brought to a game screen. In this game board, there is an invisible opponent\n",
     "\n",
     "# Personal Contribution\n",
     "\n",
@@ -30,11 +30,9 @@
     "\n",
     "| Collegeboard Requirements | My Application |\n",
     "\n",
-    "|------------------|------------------|\n",
-    "\n",
     "| Instructions for input from one of the following: the user, a device, an online datas stream, a file.  | Ideally, the game should record the number of kills and store them as wins per each player, which will update the wins column of the leaderboard |\n",
     "\n",
-    "| Use of at least one list (or other collection type) to represent a collection of data that is stored and used to manage program complexity and help fulfill the users purpose.  | [Array](https://ibb.co/VYxqmwj) |\n",
+    "| Use of at least one list (or other collection type) to represent a collection of data that is stored and used to manage program complexity and help fulfill the users purpose.  | [Array.png](https://postimg.cc/zVzZ0N2m) |\n",
     "\n",
     "| At least one procedure that contirubted to the program's intened purpose where you have defined: the name, return type, one or more parameters:  |  |\n",
     "\n",
