--- a/_posts/2024-04-14-MCQ-2021.md
+++ b/_posts/2024-04-14-MCQ-2021.md
@@ -5,8 +5,12 @@ layout: post
 title: 2021 Practice Exam MCQ 
 type: hacks
 courses: {'compsci': {'week': 26}}
+permalink: /MCQ/
 ---
 
 # Part 1
 
 To prepare ourselves for the AP Exam coming up, we had to take a College Board Mock MCQ on Wednesday, March 14. On this exam, I got a score of 31/70. This score, as compared to Mr. Lopez' scale, would earn a 0.8/1. My justification for this low score is that I ran out of time, and was unable to work on the MC outside of the dedicated class period.
+
+Results:
+[![2021-Practice-Exam-MCQ.png](https://i.postimg.cc/j2Q0nhbK/2021-Practice-Exam-MCQ.png)](https://postimg.cc/N2MPWmFP)
