--- a/_posts/2024-04-14-MCQ-2021.md
+++ b/_posts/2024-04-14-MCQ-2021.md
@@ -5,12 +5,90 @@ layout: post
 title: 2021 Practice Exam MCQ 
 type: hacks
 courses: {'compsci': {'week': 26}}
-permalink: /MCQ/
 ---
 
-# Part 1
+# Part 1 - MCQ Grade
 
-To prepare ourselves for the AP Exam coming up, we had to take a College Board Mock MCQ on Wednesday, March 14. On this exam, I got a score of 31/70. This score, as compared to Mr. Lopez' scale, would earn a 0.8/1. My justification for this low score is that I ran out of time, and was unable to work on the MC outside of the dedicated class period.
+To prepare ourselves for the AP Exam coming up, we had to take a College Board Mock MCQ on Wednesday, March 14. On this exam, I got a score of 31/70. This score, as compared to Mr. Lopez' scale, would earn a 0.8/1.
 
 Results:
 [![2021-Practice-Exam-MCQ.png](https://i.postimg.cc/j2Q0nhbK/2021-Practice-Exam-MCQ.png)](https://postimg.cc/N2MPWmFP)
+
+That being said, I only finished up to question 42, meaning in actuality I got a 31/42, which would earn me 73.8% raw score.
+
+# Part 2 - MCQ Reflection/Correction
+
+> Q7 Move piece on game board
+
+[![Q7.png](https://i.postimg.cc/wT5hWPyV/Q7.png)](https://postimg.cc/D8ZJ0xcJ)
+
+Originally I had chosen my answer as B (2 spaces), however I failed to realize that when the icon landed on yellow, it moved onto another yellow position so the counter would have to go up once again. This would mean that the counter would end at a score of 3
+
+> Q9 Digital representation of audio signal
+
+[![Q9.png](https://i.postimg.cc/cJz9sjc3/Q9.png)](https://postimg.cc/94GtbLKX)
+
+Audio isn't represented as code that gives instruction on how to replicate it. I don't know what I was thinking when I answered this question as I know already that audio is represented by bits and can't be represented by instructions.
+
+> Q14 Error in isIncreasing procedure
+
+[![Q14.png](https://i.postimg.cc/kg6R0pDz/Q14.png)](https://postimg.cc/pmvd8kfJ)
+
+Contrary to my original belief, switching the return booleans will give you a properly working funciton as opposed to an infinite loop.
+
+> Q15 Use drawLine procedure to draw figure
+
+[![Q15.png](https://i.postimg.cc/dQGYxmq6/Q15.png)](https://postimg.cc/Th2Fyb55)
+
+As the line is increasing upwards, not sideways, the yVal should be the one increasing each time while the xVal increasingly increasingly as 1. A real in-depth think about the problem would have saved me here
+
+> Q18 True statement about the network
+
+[![Q18.png](https://i.postimg.cc/BZzKm3nH/Q18.png)](https://postimg.cc/7bghLp7Z)
+
+I only took into consideration the quickest path from A to D, without realizing that it could've taken many paths longer than the immediate path. However if B and F are cut, A cannot reach G
+
+> Q23 True statement about the internet
+
+[![Q23.png](https://i.postimg.cc/0NrtvFV1/Q23.png)](https://postimg.cc/LqKkBCdx)
+
+This error was a lack of understanding of the concept of the internet. The internet and the Web are two different things, as the Web is responsible for protocol. However it is household knowledge that the internet can support an increasing number of users, as thats how it functions, and it haas to support billions world-wide
+
+> Q33 Efficiency of drivign route algorithms
+
+[![Q33.png](https://i.postimg.cc/Hs9H88ds/Q33.png)](https://postimg.cc/56yDZ0XZ)
+
+My incorrect answer came from my lack of understanding of the word "heuristic". This word means: proceeding to a solution by trial and error or by rules that are only loosely defined. If I had an understanding of this word, I wouldn't have falsely identified this program as an algorithm
+
+> Q34 Error in science simulation
+
+[![Q34.png](https://i.postimg.cc/L8BjYT0Q/Q34.png)](https://postimg.cc/mPkPKQ47)
+
+The code segment runs a random number twice so the only way to correct this was to replace the second random decision with an else statement.
+
+> Q36 Why information is hard to remove from internet
+
+[![Q36.png](https://i.postimg.cc/t4YsdGkc/Q36.png)](https://postimg.cc/v4w8Mjp7)
+
+This question was also answered incorrectly due to a lack of brain-control. I was reluctant to understand that something as simple as a password is what makes information hard to access on the internet. Instead I chose the next-best thing, which would be the amount of data present on the internet, making specific things hard to find, which is inherrently not true anyway.
+
+> Q41 Use of crowdsourcing in online games
+
+[![Q41.png](https://i.postimg.cc/8CFDn1f2/Q41.png)](https://postimg.cc/wtdS1YV2)
+
+This was just a misinterpretation of the prompt. Its asking for how to insentivize good behavior as opposed to discouraging bad behavior. I had originally thought this meant the same thing but a software engineer might disagree.
+
+# Part 3 - FMQ Hacks
+
+
+
+# Previous MCQs
+
+[2018 Practice MCQ Revisions](https://nathaniel633.github.io/student//2023/11/06/Practice-MCQ_IPYNB_2_.html)
+[2020 Practice MCQ Revisions](https://nathaniel633.github.io/student//2024/01/06/2-practiceMCQ_IPYNB_2_.html)
+
+# Scores
+
+Part 1: 0.8/1
+
+Part 2: 0.93/1
