--- a/_posts/2024-04-14-MCQ-2021.md
+++ b/_posts/2024-04-14-MCQ-2021.md
@@ -2,8 +2,8 @@
 toc: False
 comments: True
 layout: post
-title: 2021 Practice Exam MCQ 
-type: hacks
+title: 2020 FMQ
+type: tangibles
 courses: {'compsci': {'week': 26}}
 ---
 
@@ -80,7 +80,7 @@ This was just a misinterpretation of the prompt. Its asking for how to insentivi
 
 # Part 3 - FMQ Hacks
 
-
+[FMQ Hacks](https://nathaniel633.github.io/student//2023/11/06/Practice-MCQ_IPYNB_2_.html)
 
 # Previous MCQs
 
