--- a/_notebooks/2024-04-17-Data-Structures-Writeup.ipynb
+++ b/_notebooks/2024-04-17-Data-Structures-Writeup.ipynb
@@ -7,28 +7,91 @@
     "---\n",
     "comments: true\n",
     "layout: post\n",
-    "title: MCQ 2020 Frequently Missed Questions\n",
-    "description: Questions and sample Python code to represent the most frequently missed questions on the 2020 AP Computer Science A Multiple Choice Exam. \n",
-    "type: collab\n",
-    "courses: { csp: {week: 26} }\n",
-    "---\n",
-    "\n",
-    "# Collections\n",
-    "\n",
-    "Blog Python Model code and SQLite Database."
+    "title: DataStructures Writeup\n",
+    "type: hacks\n",
+    "courses: { compsci: {week: 31} }\n",
+    "---"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "wah wah wah wah wah wah wah wah wah"
+    "# Collections\n",
+    "\n",
+    "Blog Python Model code and SQLite Database.\n",
+    "\n",
+    "- From VSCode using SQLite3 Editor, show your unique collection/table in database, display rows and columns in the table of the SQLite database.\n",
+    "\n",
+    "[![DB-result.png](https://i.postimg.cc/5tpDrcBP/DB-result.png)](https://postimg.cc/4K78KSFt)\n",
+    "\n",
+    "Here we see the database in SQLite of the items that our integrated CPT project calls in the frontend\n",
+    "\n",
+    "- From VSCode model, show your unique code that was created to initialize table and create test data.\n",
+    "\n",
+    "[![Backend-init.png](https://i.postimg.cc/Tw5M57bC/Backend-init.png)](https://postimg.cc/YG7yJxbW)\n",
+    "\n",
+    "Specific to my team's CPT, this data initializes the columns for the information on each character in terms of id, class name, health, attack, range, and movement.\n",
+    "\n",
+    "# Lists and Dictionaries\n",
+    "\n",
+    "Blog Python API code and use of List and Dictionaries.\n",
+    "\n",
+    "- In VSCode using Debugger, show a list as extracted from database as Python objects.\n",
+    "\n",
+    "[![Dict.png](https://i.postimg.cc/mDjMMjG1/Dict.png)](https://postimg.cc/ygJkCFx7)\n",
+    "\n",
+    "Here is the python code of which I extract entries from 'self' a python function using a breakpoint in debugger.\n",
+    "\n",
+    "- In VSCode use Debugger and list, show two distinct example examples of dictionaries, show Keys/Values using debugger.\n",
+    "\n",
+    "[![Multiple-dicts.png](https://i.postimg.cc/XYZ9B9JQ/Multiple-dicts.png)](https://postimg.cc/Snhnw2cM)\n",
+    "\n",
+    "Here we have another example of a dictionary where each of the inputs of the character are stored using get functions.\n",
+    "\n",
+    "# APIs and JSON\n",
+    "\n",
+    "Blog Python API code and use of Postman to request and respond with JSON.\n",
+    "\n",
+    "- In VSCode, show Python API code definition for request and response using GET, POST, UPDATE methods. Discuss algorithmic condition used to direct request to appropriate Python method based on request method.\n",
+    "\n",
+    "- In VSCode, show algorithmic conditions used to validate data on a POST condition.\n",
+    "\n",
+    "- In Postman, show URL request and Body requirements for GET, POST, and UPDATE methods.\n",
+    "\n",
+    "- In Postman, show the JSON response data for 200 success conditions on GET, POST, and UPDATE methods.\n",
+    "\n",
+    "- In Postman, show the JSON response for error for 400 when missing body on a POST request.\n",
+    "\n",
+    "- In Postman, show the JSON response for error for 404 when providing an unknown user ID to a UPDATE request.\n",
+    "\n",
+    "# Frontend\n",
+    "\n",
+    "Blog JavaScript API fetch code and formatting code to display JSON.\n",
+    "\n",
+    "- In Chrome inspect, show response of JSON objects from fetch of GET, POST, and UPDATE methods.\n",
+    "\n",
+    "[![Frontend-fetch.png](https://i.postimg.cc/mk28vhSJ/Frontend-fetch.png)](https://postimg.cc/wyZXJqZQ)\n",
+    "\n",
+    "- In the Chrome browser, show a demo (GET) of obtaining an Array of JSON objects that are formatted into the browsers screen.\n",
+    "\n",
+    "[![Frontend-fetch.png](https://i.postimg.cc/mk28vhSJ/Frontend-fetch.png)](https://postimg.cc/wyZXJqZQ)\n",
+    "\n",
+    "Here we see that once hitting 'submit', we use fetch to get our data and are then transported to the main game screen on the browser\n",
+    "\n",
+    "- In JavaScript code, describe fetch and method that obtained the Array of JSON objects.\n",
+    "\n",
+    "[![GET-Script.png](https://i.postimg.cc/g29TgV7B/GET-Script.png)](https://postimg.cc/4m5Pd9sz)\n",
+    "\n",
+    "- In JavaScript code, show code that performs iteration and formatting of data into HTML.\n",
+    "\n",
+    "\n",
+    "\n",
+    "- In the Chrome browser, show a demo (POST or UPDATE) gathering and sending input and receiving a response that show update. Repeat this demo showing both success and failure.\n",
+    "\n",
+    "    - In JavaScript code, show and describe code that handles success. Describe how code shows success to the user in the Chrome Browser screen.\n",
+    "\n",
+    "    - In JavaScript code, show and describe code that handles failure. Describe how the code shows failure to the user in the Chrome Browser screen.\n"
    ]
   }
  ],
