--- a/_notebooks/2024-04-17-Data-Structures-Writeup.ipynb
+++ b/_notebooks/2024-04-17-Data-Structures-Writeup.ipynb
@@ -71,27 +71,49 @@
     "\n",
     "- In Chrome inspect, show response of JSON objects from fetch of GET, POST, and UPDATE methods.\n",
     "\n",
-    "[![Frontend-fetch.png](https://i.postimg.cc/mk28vhSJ/Frontend-fetch.png)](https://postimg.cc/wyZXJqZQ)\n",
+    "[![frontend-better-fetch.png](https://i.postimg.cc/vmwWK7pq/frontend-better-fetch.png)](https://postimg.cc/bZLDDnYk)\n",
+    "\n",
+    "Here we store the fetch in an away response.\n",
     "\n",
     "- In the Chrome browser, show a demo (GET) of obtaining an Array of JSON objects that are formatted into the browsers screen.\n",
     "\n",
     "[![Frontend-fetch.png](https://i.postimg.cc/mk28vhSJ/Frontend-fetch.png)](https://postimg.cc/wyZXJqZQ)\n",
     "\n",
-    "Here we see that once hitting 'submit', we use fetch to get our data and are then transported to the main game screen on the browser\n",
+    "We see here the main game screen with the character chosen previously on-screen and it's specific attributes to the character class using GET JSON objects from fetch.\n",
     "\n",
     "- In JavaScript code, describe fetch and method that obtained the Array of JSON objects.\n",
     "\n",
     "[![GET-Script.png](https://i.postimg.cc/g29TgV7B/GET-Script.png)](https://postimg.cc/4m5Pd9sz)\n",
     "\n",
+    "In the JavaScript, here we have the fetch GET method receiving an array of the CurrentChar stats to perform the damage calculations. \n",
+    "\n",
     "- In JavaScript code, show code that performs iteration and formatting of data into HTML.\n",
     "\n",
+    "[![JS-HTML.png](https://i.postimg.cc/Pxvt6m8L/JS-HTML.png)](https://postimg.cc/ZBZtnvHZ)\n",
     "\n",
+    "In this JavaScript as part of the Character Creation page, we see the stats of the current character being formatted into an array for the HTML to access to display in a table on the character selection screen.\n",
     "\n",
     "- In the Chrome browser, show a demo (POST or UPDATE) gathering and sending input and receiving a response that show update. Repeat this demo showing both success and failure.\n",
     "\n",
-    "    - In JavaScript code, show and describe code that handles success. Describe how code shows success to the user in the Chrome Browser screen.\n",
+    "[![Site-success.png](https://i.postimg.cc/CKg8jxBp/Site-success.png)](https://postimg.cc/Sngj4qfg)\n",
     "\n",
-    "    - In JavaScript code, show and describe code that handles failure. Describe how the code shows failure to the user in the Chrome Browser screen.\n"
+    "Here is a successful example of me previously on position 3 and moving to position 6, with this move being logged in the console as well as a JavaScript alert warning me the enemy has also moved.\n",
+    "\n",
+    "[![Site-failure.png](https://i.postimg.cc/5N1NqKbT/Site-failure.png)](https://postimg.cc/YjnHt34z)\n",
+    "\n",
+    "However if you input a space not adjacent to you (ex. me being on space 6 and requesting to move to space 1), you will get an alert saying that your input is not valid.\n",
+    "\n",
+    " - In JavaScript code, show and describe code that handles success. Describe how code shows success to the user in the Chrome Browser screen.\n",
+    "\n",
+    "[![js-success.png](https://i.postimg.cc/tgV8ZyZ6/js-success.png)](https://postimg.cc/mcBmJvSZ)\n",
+    "\n",
+    "Here we see our JavaScript riddled with console logs to notify the player that the enemy has moved and where it has moved to once they player moves successfully.\n",
+    "\n",
+    "- In JavaScript code, show and describe code that handles failure. Describe how the code shows failure to the user in the Chrome Browser screen.\n",
+    "\n",
+    "[![js-failure.png](https://i.postimg.cc/rwzYtc0J/js-failure.png)](https://postimg.cc/zyZk9skb)\n",
+    "\n",
+    "However here, at the bottom of the previous JavaScript segment, we have a line to alert the player of an invalid input if something goes wrong along the way, as well as a check for player and enemy positions.\n"
    ]
   }
  ],
