--- a/_notebooks/2024-04-17-Data-Structures-Writeup.ipynb
+++ b/_notebooks/2024-04-17-Data-Structures-Writeup.ipynb
@@ -55,15 +55,31 @@
     "\n",
     "- In VSCode, show Python API code definition for request and response using GET, POST, UPDATE methods. Discuss algorithmic condition used to direct request to appropriate Python method based on request method.\n",
     "\n",
+    "[![API-post-method.png](https://i.postimg.cc/TYTfDBZ3/API-post-method.png)](https://postimg.cc/dDNbMNsb)\n",
+    "\n",
+    "With the POST inside of the crud class, we see that the python for creating a character is only accessed when all previous requirements are met.\n",
+    "\n",
     "- In VSCode, show algorithmic conditions used to validate data on a POST condition.\n",
+    "\n",
+    "[![if-to-validate.png](https://i.postimg.cc/Sxs4ZCQ0/if-to-validate.png)](https://postimg.cc/8jqxcFrw)\n",
+    "\n",
+    "Here we have our conditional 'if' statement checking whether CharClass exists, then returning the JSON for the current character\n",
     "\n",
     "- In Postman, show URL request and Body requirements for GET, POST, and UPDATE methods.\n",
     "\n",
     "- In Postman, show the JSON response data for 200 success conditions on GET, POST, and UPDATE methods.\n",
     "\n",
+    "[![Postman-200.png](https://i.postimg.cc/2y2C1KXX/Postman-200.png)](https://postimg.cc/5QYhGnJw)\n",
+    "\n",
+    "The output is 'null' as I currently haven't initialized any data\n",
+    "\n",
     "- In Postman, show the JSON response for error for 400 when missing body on a POST request.\n",
     "\n",
+    "[![Postman-400.png](https://i.postimg.cc/GhW5kQwM/Postman-400.png)](https://postimg.cc/crchWfJY)\n",
+    "\n",
     "- In Postman, show the JSON response for error for 404 when providing an unknown user ID to a UPDATE request.\n",
+    "\n",
+    "\n",
     "\n",
     "# Frontend\n",
     "\n",
