--- a/_notebooks/2024-04-17-Data-Structures-Writeup.ipynb
+++ b/_notebooks/2024-04-17-Data-Structures-Writeup.ipynb
@@ -23,15 +23,15 @@
     "\n",
     "- From VSCode using SQLite3 Editor, show your unique collection/table in database, display rows and columns in the table of the SQLite database.\n",
     "\n",
-    "[![DB-result.png](https://i.postimg.cc/5tpDrcBP/DB-result.png)](https://postimg.cc/4K78KSFt)\n",
+    "[![New-SQLite-db.png](https://i.postimg.cc/BQXfPFPS/New-SQLite-db.png)](https://postimg.cc/4mkSrm1q)\n",
     "\n",
-    "Here we see the database in SQLite of the items that our integrated CPT project calls in the frontend\n",
+    "Here we see the database in SQLite of the items unique to each of a handful of our group's members, which we use to differentiate and create 'profiles' in our project. This is seen as created by my backend initialization code which can be apended upon but display in the database when ./migrate.sh is ran.\n",
     "\n",
     "- From VSCode model, show your unique code that was created to initialize table and create test data.\n",
     "\n",
-    "[![Backend-init.png](https://i.postimg.cc/Tw5M57bC/Backend-init.png)](https://postimg.cc/YG7yJxbW)\n",
+    "[![New-players-init.png](https://i.postimg.cc/gjysnNyS/New-players-init.png)](https://postimg.cc/rRmxHGPx)\n",
     "\n",
-    "Specific to my team's CPT, this data initializes the columns for the information on each character in terms of id, class name, health, attack, range, and movement.\n",
+    "Here is the code that initialized the data seen in the SQLite3 database for me, Grayson, Ellie, and Arushi with a row kept for Mr. Mortensen. This includes userids specific to the individual which can be used as a username when logging in. This is in addition to what is seen above in the Sql database and this model code is what makes the database that can be apended upon by using the HTTP functions accessed through postman or the backend\n",
     "\n",
     "# Lists and Dictionaries\n",
     "\n",
@@ -39,15 +39,15 @@
     "\n",
     "- In VSCode using Debugger, show a list as extracted from database as Python objects.\n",
     "\n",
-    "[![Dict.png](https://i.postimg.cc/mDjMMjG1/Dict.png)](https://postimg.cc/ygJkCFx7)\n",
+    "[![currentchar-in-python-list.png](https://i.postimg.cc/wTDtQdWR/currentchar-in-python-list.png)](https://postimg.cc/cr44dPGd)\n",
     "\n",
-    "Here is the python code of which I extract entries from 'self' a python function using a breakpoint in debugger.\n",
+    "This code demonstrates the retrieval of database records, storing them in a Python list CurrentCharacters, and using a list comprehension to process these records into a format suitable for JSON serialization. The jsonify function then handles the serialization and formatting of the HTTP response.\n",
     "\n",
     "- In VSCode use Debugger and list, show two distinct example examples of dictionaries, show Keys/Values using debugger.\n",
     "\n",
-    "[![Multiple-dicts.png](https://i.postimg.cc/XYZ9B9JQ/Multiple-dicts.png)](https://postimg.cc/Snhnw2cM)\n",
+    "[![Read-returns-dictionary.png](https://i.postimg.cc/k4jd3wnd/Read-returns-dictionary.png)](https://postimg.cc/ygSG0mgf)\n",
     "\n",
-    "Here we have another example of a dictionary where each of the inputs of the character are stored using get functions.\n",
+    "python read(self) function returns the dictionary for the character. This is for the attributed of the currentchar\n",
     "\n",
     "# APIs and JSON\n",
     "\n",
@@ -56,30 +56,37 @@
     "- In VSCode, show Python API code definition for request and response using GET, POST, UPDATE methods. Discuss algorithmic condition used to direct request to appropriate Python method based on request method.\n",
     "\n",
     "[![API-post-method.png](https://i.postimg.cc/TYTfDBZ3/API-post-method.png)](https://postimg.cc/dDNbMNsb)\n",
+    "[![api-get-and-put.png](https://i.postimg.cc/T1r6pbmk/api-get-and-put.png)](https://postimg.cc/kRXZHBT8)\n",
     "\n",
-    "With the POST inside of the crud class, we see that the python for creating a character is only accessed when all previous requirements are met.\n",
+    "Here we have post, get, and put methods for CurrentChar. When a request arrives at the API endpoint, Flask parses the HTTP method used for the request (e.g., GET, POST, PUT). Flask RESTapi is able to take the HTTP method and assigns it to one of the classes above.\n",
     "\n",
     "- In VSCode, show algorithmic conditions used to validate data on a POST condition.\n",
     "\n",
-    "[![if-to-validate.png](https://i.postimg.cc/Sxs4ZCQ0/if-to-validate.png)](https://postimg.cc/8jqxcFrw)\n",
+    "[![API-post-method.png](https://i.postimg.cc/TYTfDBZ3/API-post-method.png)](https://postimg.cc/dDNbMNsb)\n",
     "\n",
-    "Here we have our conditional 'if' statement checking whether CharClass exists, then returning the JSON for the current character\n",
+    "This is the same post as above. It validates the length of classname as well as getting the input for health, attack, range, and movement. You must be authenticated in order to access the JSON as stated by the 'token required'. This is a POST condition accessed through the CRUD resource.\n",
     "\n",
     "- In Postman, show URL request and Body requirements for GET, POST, and UPDATE methods.\n",
+    "\n",
+    "See screenshot below of URL and body\n",
     "\n",
     "- In Postman, show the JSON response data for 200 success conditions on GET, POST, and UPDATE methods.\n",
     "\n",
     "[![Postman-200.png](https://i.postimg.cc/2y2C1KXX/Postman-200.png)](https://postimg.cc/5QYhGnJw)\n",
     "\n",
-    "The output is 'null' as I currently haven't initialized any data\n",
+    "The output is 'null' as I currently haven't initialized any data, however as my post works, I get a 200 success labeled 'OK' and get through.\n",
     "\n",
     "- In Postman, show the JSON response for error for 400 when missing body on a POST request.\n",
     "\n",
     "[![Postman-400.png](https://i.postimg.cc/GhW5kQwM/Postman-400.png)](https://postimg.cc/crchWfJY)\n",
     "\n",
-    "- In Postman, show the JSON response for error for 404 when providing an unknown user ID to a UPDATE request.\n",
+    "When missing a body on the POST request, you get a response of 400 'bad request' as the server cannot process the request being made, here being the nonexistant request, as there needs to be data in the JSON raw in order for data to be posted via HTTP.\n",
     "\n",
+    "- In Postman, show the JSON response for error for 404.\n",
     "\n",
+    "[![404-error.png](https://i.postimg.cc/d0J6t70w/404-error.png)](https://postimg.cc/0zHDVymB)\n",
+    "\n",
+    "Here, I get a 404 error for not found when I remove a character (in this case a slash) '/' from the link, becoming an invalid link stated by my api currentchar creates, therefore not containing a file that Postman can get.\n",
     "\n",
     "# Frontend\n",
     "\n",
@@ -87,9 +94,9 @@
     "\n",
     "- In Chrome inspect, show response of JSON objects from fetch of GET, POST, and UPDATE methods.\n",
     "\n",
-    "[![frontend-better-fetch.png](https://i.postimg.cc/vmwWK7pq/frontend-better-fetch.png)](https://postimg.cc/bZLDDnYk)\n",
+    "[![failed-fetch.png](https://i.postimg.cc/brfHWdW7/failed-fetch.png)](https://postimg.cc/k6wbtMns)\n",
     "\n",
-    "Here we store the fetch in an away response.\n",
+    "Here as we call using a GET request to the HTTP to access the gameboard, we see a 405 error, similar to the postman error that I was getting \"method not allowed'. That being said, we are still let through and our previously selected character is used on our main game screen.\n",
     "\n",
     "- In the Chrome browser, show a demo (GET) of obtaining an Array of JSON objects that are formatted into the browsers screen.\n",
     "\n",
